# stashfs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  fly.py  pyproject.toml
fly/: __init__.py  container.py  crypto.py  file_index.py  fuse_app.py  legacy_fs.py  slot_table.py  storage.py  volume.py
fyl/: __init__.py  cli.py  crypto.py  fuse_app.py  legacy_fs.py  optimize.py  storage.py
stashfs/: __init__.py  allocation.py  cli.py  container.py  crypto.py  file_index.py  fuse_app.py  legacy_fs.py  optimize.py  slot_table.py  storage.py  volume.py
tests/: conftest.py  test_allocation.py  test_cli.py  test_container.py  test_crypto.py  test_file_index.py  test_fly.py  test_fyl.py  test_optimize.py  test_realistic.py  test_slot_table.py  test_stash.py  test_storage.py  test_volume.py
